# taghag

./: .agentsignore  .env.example  .gitignore  .mcp.json  2026-06-21-180953-ok-so-this-is-not-accurate-either-but-the-shiftp.txt  2026-06-21-184154-the-code-is-verified-and-committed-in-taghag-yes.txt  2026-06-21-185014-this-session-is-being-continued-from-a-previous-c.txt  AGENT.md  AGENTS.md  ARCHIVE_INVENTORY.md  Analyzing Taghag Repository Implementation.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  HANDOFF_GEMINI_TO_OPUS_2026-07-01.md  LICENSE  README.md  TAGHAG_MASTER_IMPLEMENTATION_PLAN.md  TIER_REVIEW.m3u  downloaded.xml  pool_metadata_backup.jsonl  pyproject.toml  rekordbox_mikcues_001.xml  setup.sh  spectralwaveform.py  x.mg
tools/: EXTRACTION_NOTE.md  NEXT_STEPS.md  README.md  audit_cleanroom.py  build_spotify_isrc_bridge.py  fetch_automix_payloads.py  neighborhood.json  pyproject.toml  seed_crate.py  taghag.code-workspace  test_live_automix.py  verify_renderer.py
tools/apple-analyzer/: Package.swift
tools/brain_index/: README.md  brain  brain_cli.py
tools/cue_heuristic/: README.md  TASK_GEMINI.md  TASK_GEMINI_bridge_misses.md  eval.py  ground_truth.json  scrape_targets.json
tools/cuecifer/: __init__.py  crates.py  db.py  human_correction.py  map.py  sonic_discovery.py  sync_vibes.py
tools/cuecifer-analyzer/: Package.swift
tools/forensic/: probe_all.py
tools/magikbox/: crates.py  db.py  human_correction.py  map.py  sonic_discovery.py  sync_vibes.py
tools/mixslice/: build_identity_render_plan.py  build_render_plan.py  build_transition_spec.py  (+9 more)
(+242 files in other folders)
