[project]
name = "taghag-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Georges",email = "235197271+t4gslut@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy (<2.2.0)", "librosa (>=0.11.0,<0.12.0)", "matplotlib (>=3.11.0,<4.0.0)", "soundfile (>=0.14.0,<0.15.0)", "pyrubberband (>=0.4.0,<0.5.0)", "scipy (<1.15.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
